[package]
name = "kamui-vrf-server"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "=1.16.27"
borsh = "1.2.1"
borsh-derive = "1.2.1"
thiserror = "1.0"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }
sha2 = "0.10"
base64 = "0.21"
mangekyou = { path = "../mangekyou" }
rand = "0.8"
solana-sdk = "=1.16.27"
solana-client = "=1.16.27"
solana-account-decoder = "=1.16.27"
hex = "0.4.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
futures-util = "0.3"
env_logger = "0.10"
bincode = "1.3"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "vrf-server"
path = "src/bin/vrf_server.rs"

[[bin]]
name = "enhanced-vrf-server"
path = "src/enhanced_main.rs"
